chore(sync): 同步上游新颜色

--- a/source/css/_components/tag-plugins/common.styl
+++ b/source/css/_components/tag-plugins/common.styl
@@ -37,6 +37,8 @@ set_dynamic_color($theme)
   set_dynamic_color($c-red)
 .colorful[color='orange']
   set_dynamic_color($c-orange)
+.colorful[color='amber']
+  set_dynamic_color($c-amber)
 .colorful[color='yellow']
   set_dynamic_color($c-yellow)
 .colorful[color='green']
@@ -47,6 +49,11 @@ set_dynamic_color($theme)
   set_dynamic_color($c-blue)
 .colorful[color='purple']
   set_dynamic_color($c-purple)
+.colorful[color='theme']
+  set_dynamic_color($color-theme)
+.colorful[color='accent']
+  set_dynamic_color($color-accent)
+
 
 .colorful[color='light']
   --theme-bg: white
@@ -83,6 +90,8 @@ set_darkmode_tags()
     set_dynamic_color($c-red)
   .colorful[color='orange']
     set_dynamic_color($c-orange)
+  .colorful[color='amber']
+    set_dynamic_color($c-amber)
   .colorful[color='yellow']
     set_dynamic_color($c-yellow)
   .colorful[color='green']
