--- a/source/css/_defines/const.styl
+++ b/source/css/_defines/const.styl
@@ -42,6 +42,7 @@ $color-google-red = #E8453C
 
 $c-red = #F44336
 $c-orange = #FA6400
+$c-amber = #FFBD2B
 $c-yellow = #FFBD2B
 $c-green = #3DC550
 $c-cyan = #1BCDFC
