refactor: rename `stellar-api` to `ds` https://github.com/xaoxuu/hexo-theme-stellar/commit/2f260bb2d70350cbdf7a7a2bbaf2ca1f7549250d 重命名所有ds类，以便后续分拆与同步上游更新 涉及大更新，应该仔细评估涉及到的标签。

--- a/source/css/_components/tag-plugins/friends.styl
+++ b/source/css/_components/tag-plugins/friends.styl
@@ -15,7 +15,7 @@
     align-items: stretch
     &+.group-header
       margin-top: 2rem
-  .stellar-friends-api
+  .ds-friends
     display: block
     
 
