--- a/source/css/_components/tag-plugins/timeline.styl
+++ b/source/css/_components/tag-plugins/timeline.styl
@@ -123,7 +123,7 @@
     color: var(--theme-link)
 
 .tag-plugin.timeline[api]
-  &.stellar-fcircle-api .timenode:hover .header
+  &.ds-fcircle .timenode:hover .header
     .user-info
       background: inherit
       span
