chore: `link-card` -> `ds-linkcard`

--- a/source/css/_components/tag-plugins/link.styl
+++ b/source/css/_components/tag-plugins/link.styl
@@ -3,7 +3,7 @@
   display: flex
   justify-content: center
 
-.md-text .link-card
+.md-text .ds-linkcard
   background: var(--card)
   display: inline-flex
   justify-content: space-between
@@ -18,17 +18,17 @@
     box-shadow: $boxshadow-card-float
     transform: translateY(-1px)
 
-.md-text .link-card.plain
+.md-text .ds-linkcard.plain
   flex-direction: row
   align-items: center
 
-.md-text .link-card.rich
+.md-text .ds-linkcard.rich
   flex-direction: column
   align-items: stretch
   width: 460px
   text-align: justify
 
-.md-text .link-card
+.md-text .ds-linkcard
   >.left
     overflow: hidden
     margin: 0.75rem 0 0.75rem 0.75rem
@@ -66,7 +66,7 @@
       font-size: 1rem
       margin-bottom: 0.5rem
 
-.md-text .link-card
+.md-text .ds-linkcard
   line-height: 1.2
   .title
     display: -webkit-box
