--- a/source/css/_components/tag-plugins/media.styl
+++ b/source/css/_components/tag-plugins/media.styl
@@ -1,7 +1,7 @@
 .tag-plugin.video
   line-height: 0
   margin: auto
-  video, iframe
+  video, iframe, .art-video-player
     border-radius: $border-card
     box-shadow: $boxshadow-card-float
     z-index 1
@@ -9,3 +9,5 @@
     width: 100%
     height: 100%
     margin: 0
+  .art-video-player .art-bottom
+    border-radius: 0 0 $border-card $border-card
