feat: stylish for metingjs

--- a/source/css/_components/tag-plugins/video.styl
+++ b/source/css/_components/tag-plugins/video.styl
@@ -1,6 +1,6 @@
 .tag-plugin.video
   line-height: 0
-  margin: auto
+  margin: 1em auto
   video, iframe, .art-video-player
     border-radius: $border-card
     box-shadow: $boxshadow-card-float
